index.css
body{
    margin: 0;
}

@font-face{
    font-family: 'ForName';
    src: url('./DeLaFuente.ttf')
}

@font-face{
    font-family: 'ForSlug';
    src: url('./Fibon_Sans_Regular.otf')
}


#column-hold{
    display: grid;
    transition: .745s cubic-bezier(0.5, 0, 0.1, 1);   
}

.column-pos-1{
    grid-template-columns: 50% 50% 50%;
}

.column-pos-2{
    grid-template-columns: 0% 50% 50%;
    animation: descriptionSlide1 2s ease-in-out;
}

/*  Brief CV  */

#column1{
   height: 100vh;
    z-index: 1;
}

#column1-content{
    height: calc(100vh - 6vw);
    width: 50vw;
    padding: 3vw;
    position: fixed;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
}

#name-slug{

}



#name{  
    animation: 2s ease-in-out animate;
    font-family: 'ForName';
    font-size: 5em;
    height: 100px;
    overflow: hidden;
    transform-origin: left;
}

#slug-line{
    width: 450px;
    font-family: 'ForSlug';
    font-size: 2em;
    margin-left: 10px;
    line-height: 40px;
}

#skills-list{
    list-style: none;
    padding-left: 10px;
}

#skills-list li{
    font-family: 'Roboto';
    font-weight: 300;
    font-size: 21px;
}

#skills-list li:hover{
    cursor: default;
}

#skills-list li:first-of-type{
    
    text-decoration: underline;
    margin-bottom: 5px;
    font-weight: 400;
}




/* Project Slides */
#column2{
    z-index: 2;
    transition: .745s cubic-bezier(0.5, 0, 0.1, 1);

}

.project-slide:hover{
    cursor: pointer;
}

.project-slide, .description-slide{
    height: 110vh;
}

.project-wrapper{
    height: inherit;
}

#project1{
     
}

#dr-mario-background{
    height: inherit;
    width: 100%;
    background: url(./dr-mario-ss.png) no-repeat;
    background-size: cover;
    background-position-x: center ; 
}

#project2{
    background: darksalmon
}

#project3{
    background: aquamarine;
}


/* Description SLides */

#column3 {
    z-index: 3;
    transition: .745s cubic-bezier(0.5, 0, 0.1, 1);
}

.descrip-x{
    font-family: 'ForSlug';
    font-size: 2em;
    position: absolute;
    right: 3vw;
}

.description-content{
    width: 25vw;
    height: inherit;
    display: flex;
    flex-direction: column;
    margin:auto;
    padding: 20vh;

}

.description-text{
    font-family: 'Roboto';
    font-weight: 300;
    font-size: 21px;
}

.description-links a{
    font-family: 'Roboto';
    font-weight: 300;
    font-size: 24px;
}

::-webkit-scrollbar {
    display: none;
  }

@keyframes animate{
    0%{
       width: 78px; 
       overflow-wrap: anywhere;
    }

    1%{
        overflow-wrap: normal;
    }

    100%{
        width: inherit; 
    }
}

@keyframes descriptionSlide1 {
    0%{
        grid-template-columns: 50% 50% 50%;
    }

    50%{
        grid-template-columns: 25% 50% 50%;
    }

    100%{
        grid-template-columns: 0% 50% 50%;
    }
}

